# janus-helloworld-plugin

./: .gitignore  Makefile.am  README.md  configure.ac  janus_helloworld.c
events/: Makefile.am  janus_helloworld_evh.c
plugins/: Makefile.am  janus_helloworld_plugin.c
